FIX- white-space: nowrap on buttons

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ html {
 .button {
     border-radius: 20px;
     padding: 8px 12px; 
+    white-space: nowrap;
 }
 
 *[class^='col-'] {
